--- a/views/definition.erb
+++ b/views/definition.erb
@@ -1,4 +1,4 @@
-<h1><%= @contact.full_name %>:</h1>
+<h1><%= @word %>:</h1>
 
 <div class="row">
   <div class="col-md-6">
@@ -27,21 +27,9 @@
 
 </div>
   <form action="/contact/<%= @contact.contact_id %>" method="post">
-    Address 1:<br>
+    New Definition:<br>
     <input type="text" name="address_one" value="">
     <br>
-    Address 2:<br>
-    <input type="text" name="address_two" value="">
-    <br><br>
-    City:<br>
-    <input type="text" name="city" value="">
-    <br><br>
-    State:<br>
-    <input type="text" name="state" value="">
-    <br><br>
-    Postal Code:<br>
-    <input type="text" name="postal_code" value="">
-    <br><br>
     <input type="submit" value="Submit">
   </form>
 
