--- a/views/input.erb
+++ b/views/input.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to Kidtionary!</h1>
+<h1 class="center">Welcome to Kidtionary!</h1>
 <p>Kidtionary is a fun place to learn (and create!) words.</p>
 <p>To get started, enter a word and defintion and click 'Add Word'</p>
 <p>Your word will appear in the list below. Neat!</p>
